# funbgcex

./: .gitignore  LICENSE  MANIFEST.IN  README.md  setup.cfg
docs/: Pyr4.fasta  available_Pfam.txt
docs/sample_output/Aspergillus_alliaceus_results/: BGCs.csv  results.html
docs/sample_output/Aspergillus_alliaceus_results/BGCs/: BGC1_NW_022474693_BDW43DRAFT_308692_BDW43DRAFT_308695.gbk  BGC2_NW_022474707_BDW43DRAFT_311505_BDW43DRAFT_93489.gbk  BGC3_NW_022474717_BDW43DRAFT_139745_BDW43DRAFT_313037.gbk  BGC4_NW_022474731_BDW43DRAFT_321736_BDW43DRAFT_321747.gbk  BGC5_NW_022474773_BDW43DRAFT_304690_BDW43DRAFT_316928.gbk
docs/sample_output/Aspergillus_alliaceus_results/HTMLs/: BGC1.html  BGC2.html  BGC3.html  BGC4.html  BGC5.html  classification.html  protfam.html
docs/sample_output/Aspergillus_alliaceus_results/HTMLs/css/: main_style.css  style.css
docs/sample_output/Aspergillus_terreus_NIH2624_results/: BGCs.csv  results.html
docs/sample_output/Aspergillus_terreus_NIH2624_results/BGCs/: BGC1_NT_165939_ATEG_09960_ATEG_09973.gbk  BGC2_NT_165938_ATEG_09616_ATEG_09622.gbk  BGC3_NT_165937_ATEG_09064_ATEG_09076.gbk  BGC4_NT_165937_ATEG_09088_ATEG_09091.gbk  BGC5_NT_165936_ATEG_08912_ATEG_08922.gbk  BGC6_NT_165935_ATEG_08167_ATEG_08174.gbk  BGC7_NT_165933_ATEG_07297_ATEG_07305.gbk  BGC8_NT_165929_ATEG_04412_ATEG_04419.gbk
docs/sample_output/Aspergillus_terreus_NIH2624_results/HTMLs/: BGC1.html  BGC2.html  BGC3.html  BGC4.html  BGC5.html  BGC6.html  BGC7.html  BGC8.html
funbgcex/: BGCeXtractor.py  BGfinder.py  CoreAnnotation.py  GeneralCommands.py  HTMLgenerator.py  SeqHandling.py  SimilarBGCfinder.py  main.py
funbgcex/data/: Aspfum_proteins.csv  human_proteins.csv  signal_peptide_model.keras
funbgcex/data/DIAMOND/: AspfumDB.dmnd  HumanDB.dmnd  fungal_SM_proteins.dmnd
funbgcex/data/HTML/: ALLtemplate.html  BGCtemplate.html  MAINtemplate.html  classification.html  hmm.csv  protfam.html  template.js
funbgcex/data/HTML/css/: protfam_style.css  style.css
funbgcex/data/HTML/js/: filter.js
funbgcex/data/hmm/core/: core.hmm.h3f  core.hmm.h3i  core.hmm.h3m  core.hmm.h3p  core_UstY.hmm.h3f  core_UstY.hmm.h3i  core_UstY.hmm.h3m  core_UstY.hmm.h3p
funbgcex/data/hmm/fungalSM/: fungalSM.hmm.h3i
funbgcex/data/hmm/source/core/: ABA3.hmm  AnkA.hmm  (+25 more)
(+623 files in other folders)
