[metadata]
name = funbgcex
author = Yudai Matsuda
url = https://github.com/ydmatsd/funbgcex
version = 0.0.0
description = Fungal Biosynthetic Gene Cluster eXtractor
license = MIT
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.10
	Operating System :: MacOS

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
	biopython
	pandas
	natsort

[options.entry_points]
console_scripts =
	funbgcex = funbgcex.main:main