[metadata]
name = funbgcex
author = Yudai Matsuda
url = https://github.com/ydmatsd/funbgcex
version = 1.0.0
description = Fungal Biosynthetic Gene Cluster eXtractor
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: MacOS
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    biopython>=1.85,<2
    pandas>=2.2.3,<3
    natsort>=8.4,<9
    tensorflow>=2.16,<2.17
    grpcio-status<1.60.0

[options.entry_points]
console_scripts =
    funbgcex = funbgcex.main:main
